<resources>

    <string name="app_name">BYB</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>
    <string name="network_message">It appears that network connectivity is lost. Please try again later.</string>
    <string name="connection_time_out_message">Application is facing some difficulties in fetching data from server.Please try again later.</string>
    <string name="logging_in">Logging in...</string>
    <string name="processing">Processing...</string>
    <string name="password_changed_successfully">Password changed successfully</string>

    <!-- Login Activity -->
    <string name="title_activity_login">Login</string>
    <string name="login_activity_username">Enter your email</string>
    <string name="login_activity_password">Enter your password</string>
    <string name="title_email_sign_in">Enter your email to reset your password</string>
    <string name="sign_in">Sign in</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_birthday">Birthday</string>
    <string name="hint_password">Password</string>
    <string name="title_sign_up">Signup</string>
    <string name="already_member">Already a member?</string>
    <string name="getting_league_details">Getting League Details...</string>
    <string name="getting_bet_data">Getting Bet Details...</string>
    <string name="or">or</string>
    <string name="sing_via_facebook">Sign in via Facebook</string>
    <string name="sign_via_email">Sign in via Email</string>
    <string name="loading">Loading...</string>

    <!-- Content Description -->
    <string name="sing_via_email">Sign up via Email</string>
    <string name="reset_password">Reset password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="downloading_friends_text">Getting your friends. Please wait.</string>

    <!-- Pull To Refresh -->
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Loading...</string>

    <!-- Friend -->
    <string name="title_dialog">Warning</string>
    <string name="warning_dialog_message">You will be taken to the Facebook page for authentication. Proceed?</string>

</resources>