<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/byb_grey_color" >

    <!-- Layout for header -->

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/byb_grey_color"
        android:padding="5dp" >

        <Button
            android:id="@+id/btnHeaderLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:background="@drawable/backbarbutton"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="  Back"
            android:textColor="#FFFFFF"
            android:onClick="reset"
            android:textSize="14sp"
            android:textStyle="bold" >
        </Button>

        <TextView
            android:id="@+id/tvHeaderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:maxLines="2"
            android:maxWidth="150dp"
            android:text="@string/reset_password"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" >
        </TextView>
    </RelativeLayout>

    <View
        android:id="@+id/tempView"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@id/header"
        android:background="@color/grey" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/tempView"
        android:layout_marginTop="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/title_email_sign_in"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_margin="10dip"
                android:background="@color/grey" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/display"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="10dp"
                android:hint="@string/hint_email"
                android:singleLine="true" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/grey" />

            <Button
                android:id="@+id/btnResetPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:onClick="reset"
                android:enabled="false"
                android:clickable="false"
                android:text="@string/reset_password"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>