<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/byb_grey_color"
    >

    <!-- Layout for header -->

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/byb_grey_color"
        android:padding="5dp" >

        <Button
            android:id="@+id/btnHeaderLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:background="@drawable/backbarbutton"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="  Back"
            android:textColor="#FFFFFF"
            android:onClick="reset"
            android:textSize="14sp"
            android:textStyle="bold" >
        </Button>

        <TextView
            android:id="@+id/tvHeaderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:maxLines="2"
            android:maxWidth="150dp"
            android:text="Signup"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" >
        </TextView>
    </RelativeLayout>

    <View
        android:id="@+id/tempView"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@id/header"
        android:background="@color/grey" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_below="@id/tempView"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/byb_grey_color"
            android:orientation="vertical">

            <!-- Login Form -->

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/grey" />

            <LinearLayout
                android:id="@+id/login_lnr_lyt"
                android:layout_width="fill_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/etUserName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/display"
                    android:hint="@string/hint_name"
                    android:singleLine="true"
                    android:padding="10dp"
                    android:layout_marginLeft="10dp"
                	android:layout_marginRight="10dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

              	 <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:layout_marginTop="1dip"
                    android:layout_marginLeft="10dp"
                	android:layout_marginRight="10dp"	
                    android:background="@android:color/darker_gray" /> 

                <EditText
                    android:id="@+id/etBirthDay"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/display"
                    android:hint="@string/hint_birthday"
                    android:padding="10dp"
                    android:layout_marginLeft="10dp"
                	android:layout_marginRight="10dp"	
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                 <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:layout_marginTop="1dip"
                    android:layout_marginLeft="10dp"
                	android:layout_marginRight="10dp"
                    android:background="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/display"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:layout_marginLeft="10dp"
                	android:layout_marginRight="10dp"	
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                 <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:layout_marginTop="1dip"
                    android:layout_marginLeft="10dp"
                	android:layout_marginRight="10dp"
                    android:background="@android:color/darker_gray" /> 

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/display"
                    android:hint="@string/hint_password"
                    android:padding="10dp"
                    android:layout_marginLeft="10dp"
                	android:layout_marginRight="10dp"	
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="fill_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:clickable="true" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dip"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/grey" />

            <!-- Login button -->

            <Button
                android:id="@+id/btnSignup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/title_sign_up"
                android:layout_marginBottom="50dp"
                android:textColor="@color/white" />
            <!-- Login Form Ends -->

        </LinearLayout>
    </ScrollView>

</RelativeLayout>